# power-bi-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/power_bi_mcp/: __init__.py
